# nba-stats-mcp

./: .gitignore  README.md  pyproject.toml
src/nba_stats_mcp/: helpers.py  server.py
src/nba_stats_mcp/tools/: advanced.py  games.py  league.py  players.py  teams.py
