[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nba-stats-mcp"
version = "0.1.0"
description = "MCP server providing comprehensive NBA statistics via nba_api"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.6.0",
    "nba_api>=1.4.0",
    "pandas>=2.0.0",
]

[project.scripts]
nba-stats-mcp = "nba_stats_mcp.server:main"
